--- a/zero_shot.ipynb
+++ b/zero_shot.ipynb
@@ -2,37 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT = \"I can make money purchases very easily from the mobile application and benefit from notifications. I am very satisfied.\"\n",
+    "TEXT = \"\"\"\n",
+    "The best banking application, every transaction is the fastest on mobile. They cause you a lot of losses by exchanging gold in other banks. It shows instant in English and you freeze the price for 20 seconds.\n",
+    "\"\"\"\n",
     "\n",
-    "LABELS = [\"question\", \"complaint\", \"statement\", \"praise\", \"user interface\", \"design\", \"finance\", \"credit\", \"customer relationship\",\n",
-    "          \"performance\"]"
+    "LABELS = [\"install, update\", \"app performance\", \"user interface\", \"credit, credit cart\", \"call center, atm, branch\", \"bank reputation\",\n",
+    "          \"money transfer, account\", \"error, login issue\", \"complaint\", \"praise\", \"question\", \"statement\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/okanyenigun/Desktop/codes/projects/genai_work/notebooks/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,30 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/okanyenigun/Desktop/codes/projects/genai_work/notebooks/venv/lib/python3.11/site-packages/transformers/convert_slow_tokenizer.py:473: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'sequence': 'I can make money purchases very easily from the mobile application and benefit from notifications. I am very satisfied.', 'labels': ['user interface', 'praise', 'finance', 'customer relationship', 'performance', 'statement', 'credit', 'question', 'design', 'complaint'], 'scores': [0.9950090646743774, 0.9935643672943115, 0.9875425100326538, 0.9611726999282837, 0.9325463175773621, 0.8563180565834045, 0.37213942408561707, 0.0059138997457921505, 0.0006775111542083323, 0.0005348981940187514]}\n",
+      "{'sequence': '\\nThe best banking application, every transaction is the fastest on mobile. They cause you a lot of losses by exchanging gold in other banks. It shows instant in English and you freeze the price for 20 seconds.\\n', 'labels': ['praise', 'app performance', 'user interface', 'money transfer, account', 'bank reputation', 'statement', 'credit, credit cart', 'question', 'install, update', 'complaint', 'error, login issue', 'call center, atm, branch'], 'scores': [0.9800968170166016, 0.9631492495536804, 0.7166485786437988, 0.5411187410354614, 0.5194617509841919, 0.35161706805229187, 0.23386617004871368, 0.22405430674552917, 0.13756057620048523, 0.063733771443367, 0.00818928238004446, 0.00029662676388397813]}\n",
       "\n",
-      "['user interface', 'praise', 'finance', 'customer relationship', 'performance', 'statement', 'credit', 'question', 'design', 'complaint']\n",
-      "[0.9950090646743774, 0.9935643672943115, 0.9875425100326538, 0.9611726999282837, 0.9325463175773621, 0.8563180565834045, 0.37213942408561707, 0.0059138997457921505, 0.0006775111542083323, 0.0005348981940187514]\n"
+      "['praise', 'app performance', 'user interface', 'money transfer, account', 'bank reputation', 'statement', 'credit, credit cart', 'question', 'install, update', 'complaint', 'error, login issue', 'call center, atm, branch']\n",
+      "[0.9800968170166016, 0.9631492495536804, 0.7166485786437988, 0.5411187410354614, 0.5194617509841919, 0.35161706805229187, 0.23386617004871368, 0.22405430674552917, 0.13756057620048523, 0.063733771443367, 0.00818928238004446, 0.00029662676388397813]\n"
      ]
     }
    ],
    "source": [
-    "model = models[0]\n",
+    "# model = \"MoritzLaurer/deberta-v3-large-zeroshot-v1.1-all-33\"\n",
+    "model = \"facebook/bart-large-mnli\"\n",
     "pipe = pipeline(\"zero-shot-classification\", model=model)\n",
     "\n",
     "output = pipe(TEXT, LABELS, multi_label=True)\n",
@@ -90,14 +76,7 @@
      ]
     }
    ],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "infile = open(\"zero_shot_1.pkl\", \"rb\")\n",
-    "data = pickle.load(infile)\n",
-    "infile.close()\n",
-    "print(len(data))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
