--- a/zero_shot.ipynb
+++ b/zero_shot.ipynb
@@ -2,30 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "TEXT = \"\"\"\n",
-    "The best banking application, every transaction is the fastest on mobile. They cause you a lot of losses by exchanging gold in other banks. It shows instant in English and you freeze the price for 20 seconds.\n",
+    "Bugün ing mobilden 2500 lira kredi başvurusu yaptım. Kredi onaylandı deniyor ama tekrar tekrar başvuru formu dolduruyorum. İng mobil yükleyin diye bir yazı geliyor yüklü olduğu halde tekrar yüklüyorum tekrar başvuru formu karşıma çıkıyor ve 50 defa aynı formu doldurdum 50 defa ing mobil yükledim.Komedi gibi sil baştan aynı işlemleri yapmaktan yıldım. Tamam vazgeçtim istemiyorum kredinizi.\n",
     "\"\"\"\n",
     "\n",
     "LABELS = [\"install, update\", \"app performance\", \"user interface\", \"credit, credit cart\", \"call center, atm, branch\", \"bank reputation\",\n",
-    "          \"money transfer, account\", \"error, login issue\", \"complaint\", \"praise\", \"question\", \"statement\"]"
+    "          \"money transfer, account\", \"error, login issue\", \"complaint\", \"praise\", \"question\", \"statement\"]\n",
+    "\n",
+    "LABELS = [\"kurulum, güncelleme\", \"performans\", \"arayüz\", \"kredi, kredi kartı\", \"çağrı merkezi, atm, şube\", \"prestij\", \"para transferi, hesap\",\"hata\", \"şikayet\",\"övgü\",\"soru\",\"ifade\"]\n",
+    "\n",
+    "LABELS = [\"error\",\"performance\",\"ux\",\"pricing\",\"product\",\"atm\",\"declartive\",\"credit\",\"angry\",\"urgent\", \"not urgent\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/okanyenigun/Desktop/codes/projects/genai_work/notebooks/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,26 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'sequence': '\\nThe best banking application, every transaction is the fastest on mobile. They cause you a lot of losses by exchanging gold in other banks. It shows instant in English and you freeze the price for 20 seconds.\\n', 'labels': ['praise', 'app performance', 'user interface', 'money transfer, account', 'bank reputation', 'statement', 'credit, credit cart', 'question', 'install, update', 'complaint', 'error, login issue', 'call center, atm, branch'], 'scores': [0.9800968170166016, 0.9631492495536804, 0.7166485786437988, 0.5411187410354614, 0.5194617509841919, 0.35161706805229187, 0.23386617004871368, 0.22405430674552917, 0.13756057620048523, 0.063733771443367, 0.00818928238004446, 0.00029662676388397813]}\n",
+      "I gave 5 automatic payment orders on 12.10.2023, my bills have not been paid for 2 months, there is still no solution.🤔🤔🤔\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "review = pd.read_excel(\"ing_review_w_new_zero_labels.xlsx\").loc[1,\"deep_translator\"]\n",
+    "print(review)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sequence': 'I gave 5 automatic payment orders on 12.10.2023, my bills have not been paid for 2 months, there is still no solution.🤔🤔🤔', 'labels': ['ux', 'error', 'performance', 'product', 'pricing'], 'scores': [0.570683479309082, 0.42503592371940613, 0.2641714811325073, 0.11764051765203476, 0.061063412576913834]}\n",
       "\n",
-      "['praise', 'app performance', 'user interface', 'money transfer, account', 'bank reputation', 'statement', 'credit, credit cart', 'question', 'install, update', 'complaint', 'error, login issue', 'call center, atm, branch']\n",
-      "[0.9800968170166016, 0.9631492495536804, 0.7166485786437988, 0.5411187410354614, 0.5194617509841919, 0.35161706805229187, 0.23386617004871368, 0.22405430674552917, 0.13756057620048523, 0.063733771443367, 0.00818928238004446, 0.00029662676388397813]\n"
+      "['ux', 'error', 'performance', 'product', 'pricing']\n",
+      "[0.570683479309082, 0.42503592371940613, 0.2641714811325073, 0.11764051765203476, 0.061063412576913834]\n"
      ]
     }
    ],
    "source": [
     "# model = \"MoritzLaurer/deberta-v3-large-zeroshot-v1.1-all-33\"\n",
+    "# model = \"Trendyol/Trendyol-LLM-7b-chat-v0.1\"\n",
     "model = \"facebook/bart-large-mnli\"\n",
+    "LABELS = [\"error\",\"performance\",\"ux\",\"pricing\",\"product\"]\n",
+    "\n",
     "pipe = pipeline(\"zero-shot-classification\", model=model)\n",
     "\n",
-    "output = pipe(TEXT, LABELS, multi_label=True)\n",
+    "output = pipe(review, LABELS, multi_label=True)\n",
     "print(output)\n",
     "print()\n",
     "print(output[\"labels\"])\n",
@@ -65,18 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28545\n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "{'sequence': 'I gave 5 automatic payment orders on 12.10.2023, my bills have not been paid for 2 months, there is still no solution.🤔🤔🤔', 'labels': ['angry', 'urgent', 'declartive', 'ux', 'error', 'atm', 'performance', 'credit', 'product', 'pricing', 'not urgent'], 'scores': [0.9879395961761475, 0.9784729480743408, 0.7027089595794678, 0.570683479309082, 0.42503592371940613, 0.41850823163986206, 0.2641714811325073, 0.13630643486976624, 0.11764051765203476, 0.061063412576913834, 0.007176916114985943]}\n",
+    "\n",
+    "['angry', 'urgent', 'declartive', 'ux', 'error', 'atm', 'performance', 'credit', 'product', 'pricing', 'not urgent']\n",
+    "[0.9879395961761475, 0.9784729480743408, 0.7027089595794678, 0.570683479309082, 0.42503592371940613, 0.41850823163986206, 0.2641714811325073, 0.13630643486976624, 0.11764051765203476, 0.061063412576913834, 0.007176916114985943]\n"
+   ]
   },
   {
    "cell_type": "code",
